...
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <EditText
        android:id="@+id/editTextCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:ems="10"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="580dp" />

    <Button
        android:id="@+id/buttonOrderTickets"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:enabled="false"
        android:text="Order tickets? "
...
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

    <EditText
        android:id="@+id/editTextNumberofTickets"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border_off"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
...
